# dune-vof

./: AUTHORS  CMakeLists.txt  README.md  config.h.cmake  dune-vof.pc.in  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxylocal  mainpage.txt  modules.txt
dune/: CMakeLists.txt
dune/vof/: CMakeLists.txt  algorithm.hh  brent.hh  brents.hh  colorfunction.hh  curvature.hh  curvatureSet.hh  curvatureset.hh  dataset.hh  domain.hh  eoc.hh  errors.hh  evolution.hh  evolve.hh  femdfwrapper.hh  flagCells.hh  flagging.hh  flags.hh  flagset.hh  geometricaltoolbox.hh  geometricutility.hh  hyperplane.hh  hypersurface.hh  initialize.hh  interpolation.hh  main.hh  mcmgmapper.hh  mixedcellmapper.hh  modifiedswartz.hh  params.hh  reconstruct.hh  reconstructedfunction.hh  reconstruction.hh  reconstructionSet.hh  secondyoungsnormalguessing.hh  testproblem.hh  utility.hh  velocity.hh  vertexneighborsstencil.hh  vof.hh  (+1 more)
dune/vof/common/: CMakeLists.txt  commoperation.hh
dune/vof/curvature/: CMakeLists.txt  cartesianheightfunctioncurvature.hh  circleinterpolationcurvature.hh  generalheightfunctioncurvature.hh  interfacenormaldivergencecurvature.hh  normaldivergencecurvature.hh  parabolainterpolationcurvature.hh  swartzcurvature.hh
dune/vof/evolution/: CMakeLists.txt  characteristicsevolution.hh  evolution.hh
dune/vof/geometry/: CMakeLists.txt  algorithm.hh  halfspace.hh  hyperplane.hh  intersect.hh  intersection.hh  polygon.hh  polytope.hh  upwindpolygon.hh  utility.hh
dune/vof/geometry/1d/: CMakeLists.txt  point.hh  upwindpolygon.hh
dune/vof/geometry/2d/: CMakeLists.txt  intersect.hh  polygon.hh  upwindpolygon.hh
dune/vof/geometry/3d/: CMakeLists.txt  face.hh  intersect.hh  polygonwithdirections.hh  polyhedron.hh  rotation.hh  upwindpolygon.hh
dune/vof/interfacegrid/: CMakeLists.txt  capabilities.hh  datahandle.hh  dataset.hh  declaration.hh  entity.hh  entityseed.hh  geometry.hh  grid.hh  gridview.hh  hostgridaccess.hh  idset.hh  indexset.hh  intersection.hh  intersectioniterator.hh  iterator.hh  persistentcontainer.hh
dune/vof/interpolation/: CMakeLists.txt  circleinterpolation.hh  interpolations.hh  recursiveinterpolation.hh  recursiveinterpolationcube.hh
dune/vof/reconstruction/: CMakeLists.txt  generalheightfunction.hh  heightfunction.hh  modifiedswartz.hh  modifiedyoungs.hh  modifiedyoungssecondorder.hh  swartz.hh
dune/vof/stencil/: CMakeLists.txt  edgeneighborsstencil.hh  heightfunctionstencil.hh  vertexneighborsstencil.hh
dune/vof/test/: 1dgrid.dgf  2dgrid.dgf  CMakeLists.txt  average.hh  binarywriter.hh  colorfunction.hh  errors.hh  exactevolution.hh  interpolation.hh  io.hh  parameter  parameter.ini  problem.hh  reconstructionwriter.hh  recursiveinterpolation.hh  recursiveinterpolationcube.hh  test-curvature.cc  test-geometry.cc  test-interfacegrid.cc  test-vof-2d-circle-exact.cc  test-vof-2d-circle.cc  test-vof-2d-diagonal.cc  test-vof-2d-linear.cc  test-vof-3d-circle.cc  test-vof-3d-diagonal.cc  test-vof-3d-linear.cc  test-vof-consistence.cc  test-vof.cc  utility.hh  vtu.hh
dune/vof/test/problems/: CMakeLists.txt  ellipse.hh  hills.hh  linearwall.hh  problems.hh  rotatingcircle.hh  sflow.hh  slope.hh
example/: CMakeLists.txt  average.hh  bin2vtk.cc  binarywriter.hh  colorFunction.hh  domain.hh  errors.hh  main.cc  parameter  parameter.ini  problem.hh  testproblem.hh  vof-fem.cc  vof.cc
examples/: CMakeLists.txt
examples/fem/: 2dgrid.dgf  3dgrid.dgf  CMakeLists.txt  allBinToVtk.sh  allbin2vtk.sh  bin2vtk.cc  binarywriter.hh  hosts  main.cc  parameter  polygon.hh  reconstructionwriter.hh  velocity.hh  vof-fem.cc  vtu.hh
examples/nofem/: CMakeLists.txt  average.hh  main.cc  polygon.hh
examples/problems/: linearwall.hh  rotatingcircle.hh  sflow.hh  slottedcylinder.hh
src/: CMakeLists.txt  L1projection.hh  cputime.hh  cube2.dgf  dune-vof-plotbuilder.cc  dune-vof.cc  errors.hh  evolve.hh  flags.hh  geometricaltoolbox.hh  hypersurface.hh  initialize.hh  io.hh  main.cc  parameter.ini  polygon.hh  reconstruct.hh  reconstructionSet.hh  secondyoungsnormalguessing.hh  swartzmethod.hh  test8.dgf  testproblem.hh  vtu.hh
vof-fem/: 1dgrid.dgf  2dgrid.dgf  3dgrid.dgf  CMakeLists.txt  dfwrapper.hh  fvscheme.hh  main.cc  model.hh  polygon.hh  problems.hh
