set(
  vof_HEADERS
  polygon.hh 
  vtu.hh
  errors.hh
  evolve.hh
  geometricaltoolbox.hh
  L1projection.hh
  reconstruct.hh
  reconstructionSet.hh
  hypersurface.hh
  flags.hh
  io.hh
  secondyoungsnormalguessing.hh
  swartzmethod.hh
  brent.hh
  cputime.hh
)
install(FILES ${vof_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/src)
